Fix target attribute

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <h1>Odin Recipes</h1>
         
         <ul>
-            <li><a href="recipes/creamy-chicken-sopas.html">
+            <li><a href="recipes/creamy-chicken-sopas.html" target="_blank">
                 Creamy Chicken Sopas
-            </a><li></li>
-            <li><a href="recipes/pork-steak.html">Pork Steak</a></li>
-            <li><a href="recipes/steamed-rice-cakes.html">Steamed Rice Cake</a></li>
+            </a></li>
+            <li><a href="recipes/pork-steak.html" target="_blank">Pork Steak</a></li>
+            <li><a href="recipes/steamed-rice-cakes.html" target="_blank">Steamed Rice Cake</a></li>
         </ul>
         
 
