Add steps and final paragraph

--- a/recipes/pork-steak.html
+++ b/recipes/pork-steak.html
@@ -31,5 +31,21 @@
             <li>1/2 teaspoon sugar</li>
             <li>4 cups beef broth</li>
         </ul>
+
+        <h3>Steps</h3>
+
+        <ol>
+            <li>Place pork chops in a resealable bag. Pour soy sauce into the bag and squeeze-in lemon. Blend all ingredients. Seal the bag and marinate for at least one hour.</li>
+            <li>Drain the excess marinade. Set it aside.</li>
+            <li>Heat 1 tablespoon oil on a pan or use cooking oil spray. Pan-fry marinated pork chops for 1 ½ minutes per side. Remove pork chops from the pan. Set aside.</li>
+            <li>Add 3 tablespoons cooking oil on the same pan. Saute garlic and half of the onions once the oil starts to get hot.</li>
+            <li>Once onion softens, pour beef broth and pour the remaining marinade. Let boil.</li>
+            <li>Put pork chops back into the pan. Cover and cook in medium heat for 20 minutes. Note: add more broth as necessary.</li>
+            <li>Turn the pork chops over. Cover and cook in medium heat for 18 minutes.</li>
+            <li>Season with sugar and ground black pepper. Add remaining onions. Cook for 8 minutes.</li>
+            <li>Transfer to a serving plate. Serve with warm white rice.</li>
+        </ol>
+
+        <p>There you have it! Enjoy your meal! For more information on the recipe and to watch a video tutorial of this, visit <a href="https://speedyrecipe.com/pork-steak-recipe/" target="_blank">Speedy Recipe</a>.</p>
     </body>
 </html>
