Add ingredients, steps, and final paragraph

--- a/recipes/steamed-rice-cakes.html
+++ b/recipes/steamed-rice-cakes.html
@@ -21,14 +21,35 @@
         <h3>Ingredients</h3>
 
         <ul>
+            <li>1 egg white</li>
+            <li>1/2 cup water</li>
+            <li>1/2 cup coconut milk</li>
+            <li>110 g (1 cup) rice flour</li>
+            <li>6.5 g (2 teaspoons) baking powder</li>
+            <li>112 g (1/2 cup) white sugar</li>
+            <li>Velveeta cheese cut into slices (optional)</li>
 
+        </ul>
+
+        <h3>Equipment</h3>
+        <ul>
+            <li>Steamer</li>
         </ul>
 
 
         <h3>Steps</h3>
 
         <ol>
-
+            <li>Preheat your steamer over medium heat on the stove.</li>
+            <li>In a large mixing bowl, whisk the egg whites, water, and coconut milk until fully incorporated.</li>
+            <li>Sift the rice flour and baking powder over the wet ingredients. Use the whisk to mix all the ingredients together.</li>
+            <li>Pour the sugar into the batter and mix to combine.</li>
+            <li>Scoop the puto mixture into mini muffin molds to about ¾ of the way up. Place the molds into the steamer and cover with a lid.</li>
+            <li>Steam for 8 minutes and remove the lid to see if the puto is fluffy and firm. If you would like to add cheese, cut the cheese into small ½ inch slices and place on top of the puto. Cover with the lid and allow it to melt for about 30 seconds. Remove when the cheese has slightly melted.</li>
+            <li>Remove the puto from the steamer and let sit in the molds for 30 seconds to cool before removing them from the molds. Serve immediately.</li>
+            <li>Serve.</li>
         </ol>
+
+        <p>And that's a wrap! You now have food to feast on whenever you crave sweet food.</p>
     </body>
 </html>
