Add picture of food after heading 1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        
+        <img src="https://images.unsplash.com/photo-1424847651672-bf20a4b0982b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Table full of food and drinks">
         <ul>
             <li><a href="recipes/creamy-chicken-sopas.html" target="_blank">
                 Creamy Chicken Sopas
