--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes My Stomach Can't Live Without</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
